vbnc/vbnc/vbnc/tests/Errors/30060-21.vb
Imports System
Class T
    Const M_String As int64 = "#"
End Class